2008-09-30 Quentin Mathe <qmathe@club-internet.fr>

	* Headers/COObjectContext.h:
	* COObjectContext.m (-objectForUUID:): Modularized into several new methods 
	-objectWithUUID:, -objectWithUUID:version:, -objectWithURL:version.

2008-09-30 Quentin Mathe <qmathe@club-internet.fr>

	More work on faulting. Faulting is now working but is not used yet.
	* Headers/COGroup.h:
	* COGroup.m:
	(-resolveFaults): Fixed by modifying it to match the doc and the new test 
	method.
	(-setHasFaults,-serialize:using:): Added.
	(-members, -groups, -mergeObjectsWithObjectsOfGroup:policy:, 
	replaceObject:byObject:isTemporalMerge:error:): Modified to call 
	-resolveFaults.
	* TestGroup.m (-testResolveFaults): Added.
	* COObjectContext.m (-resolvedObjectForFault:): Fixed, the current code 
	was a rough draft.
	(-objectForUUID:, objectByRollingbackObject:toVersion:mergeImmediately:): 
	Modified to mark deserialized objects as having faults.
	* TestObjectContext.m (-testResolvedObjectForFault): Added.

2008-09-29 Quentin Mathe <qmathe@club-internet.fr>

	* Headers/COObjectContext.h:
	* COObjectContext.m (-lastSnapshotVersionOfObjectWithURL:, 
	-objectForUUID:): Added.
	* TestObjectContext.m (-testLastSnapshotVersionOfObjectWithURL, 
	-testObjectForUUID:): Added.

2008-09-27 Quentin Mathe <qmathe@club-internet.fr>

	* Headers/COMetadataServer.h:
	* COMetadataServer.m: 
	(+objectVersionForUUID:): Added.
	* TestMetadataServer.m: Updated.

2008-09-27 Quentin Mathe <qmathe@club-internet.fr>

	* Headers/COObjectContext.h:
	* COObjectContext.m: 
	(+defaultContext:): Removed.
	(+currentContext:, +setCurrentContext:, +initialize): Added.
	* TestObjectContext.m: Updated.

2008-09-26 Quentin Mathe <qmathe@club-internet.fr>

	* Headers/COObjectServer.h:
	* COObjectServer.m: 
	Documented several methods and...
	(-metadataServer): Added.
	(-objectForUUID: -managedObjectForURL:): Implemented.
	* TestObjectServer.m: Added.

2008-09-25 Quentin Mathe <qmathe@club-internet.fr>
